Sat Aug 30 22:45:00 2008  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* thread.c (rb_queue_shift): fix memory leak.

Sat Aug 30 20:06:24 2008  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* vm_core.h (struct rb_thread_struct): added signal and message
	  queues.

	* thread.c (rb_queue_initialize, rb_queue_destroy, rb_queue_push),
	  (rb_queue_shift): new functions.

	* thread.c (rb_thread_execute_interrupts): uses signal queue.

	* thread.c (ruby_vm_send_signal): extracted from vm_send_signal.

	* vm.c (vm_free): unlock and destroys global_vm_lock.

	* vm.c (th_init2, thread_free): initializes and destroys signal and
	  message queues.

Sat Aug 30 16:38:23 2008    <nobu@ruby-lang.org>

	* vm_core.h (struct rb_vm_struct): replaced signal staff with trap
	  staff.

	* signal.c (signal_buff): per process resouce now.

	* signal.c (trap_list): moved to VM.

	* signal.c (rb_get_next_signal): reverted.

	* signal.c (rb_trap_exit): trap_pending_list was no longer used.

	* thread.c (timer_thread_function): delivers buffered per-process
	  signals to each VMs.

	* vm.c (rb_vm_mark): marks trap_list.

Fri Aug 29 19:44:50 2008  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* common.mk (VM_CORE_H_INCLUDES): needs mvm.h.

	* signal.c (sighandler), thread.c (timer_thread_function): delivers to
	  all VMs.

	* thread_{pthread,win32}.c (ruby_native_thread_lock_initialize),
	  (ruby_native_thread_lock_destroy): exported.

	* vm_core.h (struct rb_vm_struct): added signal lock.

	* vm.c (vm_manager): manages MVM.

	* vm.c (ruby_vm_foreach): iterates over all VMs.  returnig false stops
	  the iteration.

	* vm.c (vm_free): unregister and free VM structure.

	* vm.c (vm_init2): moved initialization of locks and object space.

	* vm.c (ruby_vm_send_signal, ruby_vm_get_next_signal): sends/retreives
	  VM signal.

Thu Jul 31 01:36:02 2008  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* file.c (rb_file_s_join, Init_File): moved separator to VM.
